--- a/index.html
+++ b/index.html
@@ -8,70 +8,275 @@
 		<meta name="description" content="Some inspiration for web divider styles" />
 		<meta name="keywords" content="separator css, divider css, separator style, web design, flat design, inspiration, responsive, svg, pseudo-elements" />
 		<meta name="author" content="Codrops" />
-		<link rel="shortcut icon" href="../favicon.ico">
+		<link rel="shortcut icon" href="http://www.gravatar.com/avatar/b8a1284b0d0202c5866d40c04b8bd842.jpg?s=16">
+		<link rel="stylesheet" type="text/css" href="http://static.coreybutler.com/css/cb-embedded.css"/>
+		<link rel="stylesheet" type="text/css" href="http://static.coreybutler.com/css/hint.css"/>
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="css/icons.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
 		<script src="js/modernizr.custom.js"></script>
+		<style>
+			section {color: #333;}
+			.column > a > div {
+				color: #333;
+				font-size: 70px;
+			}
+			header {
+				background: #efefef !important;
+				color: #333 !important;
+			}
+			.ss-style-triangles::before {
+				background: #333;
+			}
+			.icon:before {font-family: cb !important;}
+			.white {
+				color: #e9e9e9;
+				font-family: Lato, Arial, sans-serif;
+				font-weight: 100 !important;
+			}
+			.writing > div > a > img,
+			.writing > div > a > div {
+				font-size: 38px !important;
+				padding: 0;
+			}
+			.icon-meetup:before {
+				color: #efefef !important;
+			}
+			.icon-meetup {
+				font-size: 30px !important;
+			}
+			.animated{-webkit-animation-fill-mode:both;-moz-animation-fill-mode:both;-ms-animation-fill-mode:both;-o-animation-fill-mode:both;animation-fill-mode:both;-webkit-animation-duration:1s;-moz-animation-duration:1s;-ms-animation-duration:1s;-o-animation-duration:1s;animation-duration:1s;}.animated.hinge{-webkit-animation-duration:1s;-moz-animation-duration:1s;-ms-animation-duration:1s;-o-animation-duration:1s;animation-duration:1s;}@-webkit-keyframes bounceInRight {
+	0% {
+		opacity: 0;
+		-webkit-transform: translateX(2000px);
+	}	60% {
+		opacity: 1;
+		-webkit-transform: translateX(-30px);
+	}
+	
+	80% {
+		-webkit-transform: translateX(10px);
+	}
+	
+	100% {
+		-webkit-transform: translateX(0);
+	}
+}
+
+@-moz-keyframes bounceInRight {
+	0% {
+		opacity: 0;
+		-moz-transform: translateX(2000px);
+	}
+	
+	60% {
+		opacity: 1;
+		-moz-transform: translateX(-30px);
+	}
+	
+	80% {
+		-moz-transform: translateX(10px);
+	}
+	
+	100% {
+		-moz-transform: translateX(0);
+	}
+}
+
+@-o-keyframes bounceInRight {
+	0% {
+		opacity: 0;
+		-o-transform: translateX(2000px);
+	}
+	
+	60% {
+		opacity: 1;
+		-o-transform: translateX(-30px);
+	}
+	
+	80% {
+		-o-transform: translateX(10px);
+	}
+	
+	100% {
+		-o-transform: translateX(0);
+	}
+}
+
+@keyframes bounceInRight {
+	0% {
+		opacity: 0;
+		transform: translateX(2000px);
+	}
+	
+	60% {
+		opacity: 1;
+		transform: translateX(-30px);
+	}
+	
+	80% {
+		transform: translateX(10px);
+	}
+	
+	100% {
+		transform: translateX(0);
+	}
+}
+
+.bounceInRight {
+	-webkit-animation-name: bounceInRight;
+	-moz-animation-name: bounceInRight;
+	-o-animation-name: bounceInRight;
+	animation-name: bounceInRight;
+}
+@-webkit-keyframes bounceOutRight {
+	0% {
+		-webkit-transform: translateX(0);
+	}
+	
+	20% {
+		opacity: 1;
+		-webkit-transform: translateX(-20px);
+	}
+	
+	100% {
+		opacity: 0;
+		-webkit-transform: translateX(2000px);
+	}
+}
+
+@-moz-keyframes bounceOutRight {
+	0% {
+		-moz-transform: translateX(0);
+	}
+	
+	20% {
+		opacity: 1;
+		-moz-transform: translateX(-20px);
+	}
+	
+	100% {
+		opacity: 0;
+		-moz-transform: translateX(2000px);
+	}
+}
+
+@-o-keyframes bounceOutRight {
+	0% {
+		-o-transform: translateX(0);
+	}
+	
+	20% {
+		opacity: 1;
+		-o-transform: translateX(-20px);
+	}
+	
+	100% {
+		opacity: 0;
+		-o-transform: translateX(2000px);
+	}
+}
+
+@keyframes bounceOutRight {
+	0% {
+		transform: translateX(0);
+	}
+	
+	20% {
+		opacity: 1;
+		transform: translateX(-20px);
+	}
+	
+	100% {
+		opacity: 0;
+		transform: translateX(2000px);
+	}
+}
+
+.bounceOutRight {
+	-webkit-animation-name: bounceOutRight;
+	-moz-animation-name: bounceOutRight;
+	-o-animation-name: bounceOutRight;
+	animation-name: bounceOutRight;
+}
+			#menu {
+				position: fixed;
+				top: 10px;
+				right: 10px;
+				width: 100px;
+				z-index: 10001;
+			}
+			#menu > div:first-child {
+				position: absolute;
+				top: 0px;
+				right: 0px;
+				width: 100px;
+				font-size: 60px;
+				background: rgba(0,0,0,.8);
+				border-radius: 3px;
+				padding: 6px;
+			}
+			#menu > div:last-child {
+				position: absolute;
+				top: 0px;
+				right: 0px;
+				font-size: 42px;
+				color: rgba(0,0,0,.5);
+				z-index: 10000;
+			}
+			#menu:hover > div:last-child,
+			.hide {
+				display: none;
+			}
+			#menu:hover > div:first-child {
+				display: block;
+			}
+			
+		</style>
 	</head>
 	<body>
-		<div class="container" style="padding-top:7%;">
-			<svg id="bigHalfCircle" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
-				<path d="M0 100 C40 0 60 0 100 100 Z"/>
-			</svg>
-			<section class="col-2 color">
-				<div class="column text">
-					<h2 style="color: #333;">The Entrepreneur</h2>
-					<p>Galaxies a still more glorious dawn awaits shores of the cosmic ocean bits of moving fluff the only home we've ever known finite but unbounded colonies astonishment laws of physics a very small stage in a vast cosmic arena brain is the seed of intelligence realm of the galaxies Apollonius of Perga rogue intelligent beings courage of our questions made in the interiors</p>
+		<div class="container">
+			<div id="menu">
+				<div class="animate animated hide">
+					<div class="hint--bounce hint--left hint--rounded" data-hint="Find me on Google+"><a href="https://plus.google.com/u/0/+CoreyButlerOfficial" target="_blank" class="icon-gplus"></a></div>
+					<div class="hint--bounce hint--left hint--rounded" data-hint="Schedule a consultation call on clarity.fm"><a href="http://clarity.fm/coreybutler" class="icon-phone" target="_blank"></a></div>
+					<div class="hint--bounce hint--left hint--rounded" data-hint="I co-run Bleeding Edge Web in Austin, TX" style="padding-left:18px;"><a href="http://www.meetup.com/bleeding-edge-web/" target="_blank" class="icon-meetup"></a></div>
 				</div>
-				<div class="column">
-					<img src="http://www.gravatar.com/avatar/b8a1284b0d0202c5866d40c04b8bd842.jpg?s=256" class="circle"/>
-					<!--<span class="icon icon-blog"></span>-->
-				</div>
-			</section>
-			<svg id="bigTriangleShadow" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
-				<path id="trianglePath1" d="M0 0 L50 100 L100 0 Z" />
-				<path id="trianglePath2" d="M50 100 L100 40 L100 0 Z" />
-			</svg>
-			<section class="col-2">
-				<div class="column text">
-					<h2>The Consultant</h2>
-					<p>Galaxies a still more glorious dawn awaits shores of the cosmic ocean bits of moving fluff the only home we've ever known finite but unbounded colonies astonishment laws of physics a very small stage in a vast cosmic arena brain is the seed of intelligence realm of the galaxies Apollonius of Perga rogue intelligent beings courage of our questions made in the interiors</p>
-				</div>
-			</section>
-			<svg id="curveUpColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
-				<path d="M0 100 C 20 0 50 0 100 100 Z"/>
-			</svg>
-			<section class="col-2 color ss-style-curvedown">
-				<div class="column">
-					<span class="icon icon-library"></span>
-				</div>
-				<div class="column text">
-					<h2>The Geek</h2>
-					<p>Galaxies a still more glorious dawn awaits shores of the cosmic ocean bits of moving fluff the only home we've ever known finite but unbounded colonies astonishment laws of physics a very small stage in a vast cosmic arena brain is the seed of intelligence realm of the galaxies Apollonius of Perga rogue intelligent beings courage of our questions made in the interiors</p>
-				</div>
-			</section>
-			<svg id="curveDownColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
-				<path d="M0 0 C 50 100 80 100 100 0 Z"/>
-			</svg>
-			<section class="col-3 ss-style-foldedcorner">
-				<div class="column">
-					<span class="icon icon-camera"></span>
-					<p>Test Take root and flourish. Extraordinary claims require extraordinary evidence, across the centuries venture hundreds of thousands are creatures of the cosmos rich in heavy atoms of brilliant syntheses Cambrian explosion Euclid...</p>
-				</div>
-				<div class="column">
-					<span class="icon icon-location"></span>
-					<p>Take root and flourish. Extraordinary claims require extraordinary evidence, across the centuries venture hundreds of thousands are creatures of the cosmos rich in heavy atoms of brilliant syntheses Cambrian explosion Euclid...</p>
-				</div>
-				<div class="column">
-					<span class="icon icon-alarm"></span>
-					<p>Take root and flourish. Extraordinary claims require extraordinary evidence, across the centuries venture hundreds of thousands are creatures of the cosmos rich in heavy atoms of brilliant syntheses Cambrian explosion Euclid...</p>
-				</div>
-			</section>
+				<div id="menubutton" class="icon-menu"></div>
+			</div>
 			<header>
-				<h1>Section Separators <span>Some inspiration for flat divider styles</span></h1>	
+				<h1>Corey Butler<span>I wear alot of hats...</span></h1>
 			</header>
+			<section class="col-3 ss-style-triangles white">
+				<div class="column">
+					<h1 style="font-weight: 300 !important; font-family: Lato;">Entrepreneur</h1>
+					<a href="http://angel.co/coreybutler" target="_blank" class="icon icon-angellist"></a>
+				</div>
+				<div class="column">
+					<h1 style="font-weight: 300 !important; font-family: Lato;">Consultant</h1>
+					<a href="http://www.linkedin.com/in/coreyabutler" target="_blank" class="icon icon-linkedin"></a>
+				</div>
+				<div class="column">
+					<h1 style="font-weight: 300 !important; font-family: Lato;">Developer</h1>
+					<a href="https://github.com/coreybutler" target="_blank" class="icon icon-github-circled"></a>
+				</div>
+			</section>
+			<section class="col-3 color ss-style-curvedown writing">
+				<h3>I also write from time to time...</h3>
+				<div class="column">
+					<h1>Articles</h1>
+					<a href="http://medium.com/@goldglovecb" target="_blank"><img src="http://static.coreybutler.com/images/icons/medium.png"/></a>
+					<!--<img src="http://www.gravatar.com/avatar/b8a1284b0d0202c5866d40c04b8bd842.jpg?s=256" class="circle"/>-->
+				</div>
+				<div class="column">
+					<h1>Tech Stuff</h1>
+					<a href="http://blog.coreybutler.com" target="_blank"><div class="icon-rss"></div></a>
+				</div><div class="column">
+					<h1>Follow</h1>
+					<a href="http://twitter.com/goldglovecb" target="_blank" class="hint--bounce hint--left hint--rounded" data-hint="@goldglovecb"><div class="icon-twitter"></div></a>
+				</div>
+			</section>
 		</div>
 	</body>
 </html>
