--- a/index.html
+++ b/index.html
@@ -46,160 +46,6 @@
 			.icon-meetup {
 				font-size: 30px !important;
 			}
-			.animated{-webkit-animation-fill-mode:both;-moz-animation-fill-mode:both;-ms-animation-fill-mode:both;-o-animation-fill-mode:both;animation-fill-mode:both;-webkit-animation-duration:1s;-moz-animation-duration:1s;-ms-animation-duration:1s;-o-animation-duration:1s;animation-duration:1s;}.animated.hinge{-webkit-animation-duration:1s;-moz-animation-duration:1s;-ms-animation-duration:1s;-o-animation-duration:1s;animation-duration:1s;}@-webkit-keyframes bounceInRight {
-	0% {
-		opacity: 0;
-		-webkit-transform: translateX(2000px);
-	}	60% {
-		opacity: 1;
-		-webkit-transform: translateX(-30px);
-	}
-	
-	80% {
-		-webkit-transform: translateX(10px);
-	}
-	
-	100% {
-		-webkit-transform: translateX(0);
-	}
-}
-
-@-moz-keyframes bounceInRight {
-	0% {
-		opacity: 0;
-		-moz-transform: translateX(2000px);
-	}
-	
-	60% {
-		opacity: 1;
-		-moz-transform: translateX(-30px);
-	}
-	
-	80% {
-		-moz-transform: translateX(10px);
-	}
-	
-	100% {
-		-moz-transform: translateX(0);
-	}
-}
-
-@-o-keyframes bounceInRight {
-	0% {
-		opacity: 0;
-		-o-transform: translateX(2000px);
-	}
-	
-	60% {
-		opacity: 1;
-		-o-transform: translateX(-30px);
-	}
-	
-	80% {
-		-o-transform: translateX(10px);
-	}
-	
-	100% {
-		-o-transform: translateX(0);
-	}
-}
-
-@keyframes bounceInRight {
-	0% {
-		opacity: 0;
-		transform: translateX(2000px);
-	}
-	
-	60% {
-		opacity: 1;
-		transform: translateX(-30px);
-	}
-	
-	80% {
-		transform: translateX(10px);
-	}
-	
-	100% {
-		transform: translateX(0);
-	}
-}
-
-.bounceInRight {
-	-webkit-animation-name: bounceInRight;
-	-moz-animation-name: bounceInRight;
-	-o-animation-name: bounceInRight;
-	animation-name: bounceInRight;
-}
-@-webkit-keyframes bounceOutRight {
-	0% {
-		-webkit-transform: translateX(0);
-	}
-	
-	20% {
-		opacity: 1;
-		-webkit-transform: translateX(-20px);
-	}
-	
-	100% {
-		opacity: 0;
-		-webkit-transform: translateX(2000px);
-	}
-}
-
-@-moz-keyframes bounceOutRight {
-	0% {
-		-moz-transform: translateX(0);
-	}
-	
-	20% {
-		opacity: 1;
-		-moz-transform: translateX(-20px);
-	}
-	
-	100% {
-		opacity: 0;
-		-moz-transform: translateX(2000px);
-	}
-}
-
-@-o-keyframes bounceOutRight {
-	0% {
-		-o-transform: translateX(0);
-	}
-	
-	20% {
-		opacity: 1;
-		-o-transform: translateX(-20px);
-	}
-	
-	100% {
-		opacity: 0;
-		-o-transform: translateX(2000px);
-	}
-}
-
-@keyframes bounceOutRight {
-	0% {
-		transform: translateX(0);
-	}
-	
-	20% {
-		opacity: 1;
-		transform: translateX(-20px);
-	}
-	
-	100% {
-		opacity: 0;
-		transform: translateX(2000px);
-	}
-}
-
-.bounceOutRight {
-	-webkit-animation-name: bounceOutRight;
-	-moz-animation-name: bounceOutRight;
-	-o-animation-name: bounceOutRight;
-	animation-name: bounceOutRight;
-}
 			#menu {
 				position: fixed;
 				top: 10px;
@@ -232,7 +78,10 @@
 			#menu:hover > div:first-child {
 				display: block;
 			}
-			
+			#main > div > a:hover {
+				color: #333;
+				background-color: #efefef !important;
+			}
 		</style>
 	</head>
 	<body>
@@ -248,7 +97,7 @@
 			<header>
 				<h1>Corey Butler<span>I wear alot of hats...</span></h1>
 			</header>
-			<section class="col-3 ss-style-triangles white">
+			<section class="col-3 ss-style-triangles white" id="main">
 				<div class="column">
 					<h1 style="font-weight: 300 !important; font-family: Lato;">Entrepreneur</h1>
 					<a href="http://angel.co/coreybutler" target="_blank" class="icon icon-angellist"></a>
