--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 				</div>
 				<div class="column">
 					<h1>Tech Stuff</h1>
-					<a href="http://blog.coreybutler.com" target="_blank"><div class="icon-rss"></div></a>
+					<a href="https://medium.com/tech-recipes" target="_blank"><div class="icon-rss"></div></a>
 				</div><div class="column">
 					<h1>Follow</h1>
 					<a href="http://twitter.com/goldglovecb" target="_blank" class="hint--bounce hint--left hint--rounded" data-hint="@goldglovecb"><div class="icon-twitter"></div></a>
