--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				<div id="menubutton" class="icon-menu"></div>
 			</div>
 			<header>
-				<h1>Corey Butler<span>I wear alot of hats...</span></h1>
+				<h1>Corey Butler<span>I wear many hats...</span></h1>
 			</header>
 			<section class="col-3 ss-style-triangles white" id="main">
 				<div class="column">
