--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<title>A Collection of Section Separators</title>
+		<title>Corey Butler - Tech Entrepreneur in Austin, TX</title>
 		<meta name="description" content="Some inspiration for web divider styles" />
 		<meta name="keywords" content="separator css, divider css, separator style, web design, flat design, inspiration, responsive, svg, pseudo-elements" />
 		<meta name="author" content="Codrops" />
