--- a/connect/index.html
+++ b/connect/index.html
@@ -216,7 +216,7 @@ ul li input[type=checkbox]:checked ~ i:after {
     <input type="checkbox" checked>
     <i></i>
     <h2>Clients</h2>
-    <p>I am lucky enough to have a huge demand for my time, so I only work with select clients. I am usually involved at the start of a project for 2-6 weeks. Beyond this, work is commonly handed off to the client team and/or my staff of hand-picked contractors (whom report to me). Think of me as your project catalyst, architect, or strategist. All work is completed on a 1099 basis via my boutique consulting firm (The Ecor Group), or through a trusted partner consulting firms.<br/><br/>Just need a quick consultation? Call me on <a href="https://clarity.fm/coreybutler" target="_blank">clarity.fm</a>.</p>
+    <p>I am lucky enough to have a huge demand for my time, so I only work with select clients. I am usually involved at the start of a project for 2-6 weeks. Beyond this, work is commonly handed off to the client team and/or my staff of hand-picked contractors (whom report to me). Think of me as your project catalyst, architect, or strategist. All work is completed on a 1099 basis via my boutique consulting firm (The Ecor Group), or through trusted partner consulting firms.<br/><br/>Just need a quick consultation? Call me on <a href="https://clarity.fm/coreybutler" target="_blank">clarity.fm</a>.</p>
   </li>
   <li>
     <input type="checkbox" checked>
@@ -225,7 +225,7 @@ ul li input[type=checkbox]:checked ~ i:after {
     <p><b>I am not looking for a W2 job</b>. <em>I will entertain 1099 subcontracts</em> (see client section).
       <br/><br/><b>I have access to many potential employees</b>, especially
       in the web and data field. Here's how:
-      <br/></br/>I co-organize the <a href="" target="_blank">Bleeding Edge Web</a>, one of Austin, TX largest tech meetup groups. Hint: We like sponsors.
+      <br/></br/>I co-organize the <a href="http://meetup.com/bleeding-edge-web" target="_blank">Bleeding Edge Web</a>, one of Austin, TX largest tech meetup groups. Hint: We like sponsors.
       <br/><br/>I authored and maintain multiple popular <a href="http://github.com/coreybutler" target="_blank">open source projects</a> used by well over 25K unique developers. Sponsorship welcome.
       <br/><br/>I recently cofounded <a href="http://peopleflow.io">PeopleFlow</a>, an HR Anlaytics Data Refinery. We know the field. I know tech.
       <br/><br/><font style="color:#D35400;text-shadow:1px 1px 2px #ccc;">I like to help people find work, but I also get a LOT of requests to promote open job reqs. I have to prioritize. First priority goes to clients, then by referral fee. Finally, I try to help local Austin companies/folks.</font>
