Added 'other' section.

--- a/connect/index.html
+++ b/connect/index.html
@@ -205,7 +205,8 @@ ul li input[type=checkbox]:checked ~ i:after {
       <input type="checkbox" checked>
     <i></i>
     <h2 style="font-size: 13px;color:#CCC;font-weight: bold;">Why am I here?</h2>
-      <p>You probably sent me an <b>unsolicited LinkedIn invite</b>. Don't know who I am? Learn on <a href="http://www.linkedin.com/in/coreyabutler" target="_blank">my LinkedIn profile</a> or my <a href="http://coreybutler.com" target="_blank">personal website</a>. <br/></br/>I may just want to know more about you before connecting, or I may want you to know more about me. I believe in "quality over quantity" networking. If I don't know you and received a generic invite without explanation of the benefits of connecting, I consider it spam, and this site is my filter. Pay attention and you'll pass. I like to network. Take the time to reply to me with a short explanation of how connecting benefits us both. See some common ways I connect below...<br/><br/>
+      <p>You probably sent me an <b>unsolicited LinkedIn invite</b>. Perhaps we met in person &amp; I don't remember you by name (please don't be insulted, I remember faces).
+        <br/><br/>Don't know who I am? Learn on <a href="http://www.linkedin.com/in/coreyabutler" target="_blank">my LinkedIn profile</a> or my <a href="http://coreybutler.com" target="_blank">personal website</a>. <br/></br/>I may just want to know more about you before connecting, or I may want you to know more about me. I believe in "quality &gt; quantity" networking. If I don't know/remember you and received a generic invite without explanation of the benefits of connecting, I consider it spam, and this site is my filter. Pay attention and you'll pass. I like to network. Take the time to reply to me with a short explanation of how connecting benefits us both. See some common ways I connect below...<br/><br/>
       <b>If you tried to connect on LinkedIn and do not respond within 14 days, your request will be ignored.</b>
       </p>
     </li>
@@ -264,6 +265,12 @@ ul li input[type=checkbox]:checked ~ i:after {
     <i></i>
     <h2>Technologists</h2>
     <p>If you are a tech person looking to collaborate on a project, let me know. If you're looking for a project to work on with someone, I have several. Hit me up and speak geek.</p>
+  </li>
+  <li>
+    <input type="checkbox" checked>
+    <i></i>
+    <h2>Other</h2>
+    <p>The list above is not meant to be exhaustive, it's just common ways I connect. If you have a good mutually beneficial reason for connecting with me, let's hear it! If you're just wanting to connect in order to ask a one-time question, make a comment, or do something that is a "one time contact", then you're better off reaching out to me  <a href="http://twitter.com/goldglovecb" target="_blank">@goldglovecb</a> on Twitter or through <a href="https://plus.google.com/u/0/+CoreyButlerOfficial" target="_blank">G+</a>. Or you can meet me face to face by coming out to one of our <a href="http://meetup.com/bleeding-edge-web" target="_blank">Bleeding Edge Web meetup events</a> if you're in Austin, TX. Just make sure to ping me on Meetup before you come out. I attend most, but not all, of our meets.</p>
   </li>
 </ul>
 
