Added 'other' section.

--- a/connect/index.html
+++ b/connect/index.html
@@ -270,7 +270,7 @@ ul li input[type=checkbox]:checked ~ i:after {
     <input type="checkbox" checked>
     <i></i>
     <h2>Other</h2>
-    <p>The list above is not meant to be exhaustive, it's just common ways I connect. If you have a good mutually beneficial reason for connecting with me, let's hear it! If you're just wanting to connect in order to ask a one-time question, make a comment, or do something that is a "one time contact", then you're better off reaching out to me  <a href="http://twitter.com/goldglovecb" target="_blank">@goldglovecb</a> on Twitter or through <a href="https://plus.google.com/u/0/+CoreyButlerOfficial" target="_blank">G+</a>. Or you can meet me face to face by coming out to one of our <a href="http://meetup.com/bleeding-edge-web" target="_blank">Bleeding Edge Web meetup events</a> if you're in Austin, TX. Just make sure to ping me on Meetup before you come out. I attend most, but not all, of our meets.</p>
+    <p>The list above is not meant to be exhaustive, it's just common ways I connect. If you have a good mutually beneficial reason for connecting with me, let's hear it! If you're just wanting to connect in order to ask a one-time question, make a comment, or do something that is a "one time contact", then you're better off reaching out to me  <a href="http://twitter.com/goldglovecb" target="_blank">@goldglovecb</a> on Twitter or through <a href="https://plus.google.com/u/0/+CoreyButlerOfficial" target="_blank">G+</a>. Or you can meet me face to face by coming out to one of our <a href="http://meetup.com/bleeding-edge-web" target="_blank">Bleeding Edge Web meetup events</a> if you're in Austin, TX. Just make sure to ping me on Meetup before you come out to make sure I'll be attending.</p>
   </li>
 </ul>
 
