--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 					<!--<img src="http://www.gravatar.com/avatar/b8a1284b0d0202c5866d40c04b8bd842.jpg?s=256" class="circle"/>-->
 				</div>
 				<div class="column">
-					<h1>Quora (Top Writer)</h1>
+					<h1>Top Writer</h1>
 					<a href="https://www.quora.com/profile/Corey-Butler" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Quora_logo_2015.svg/200px-Quora_logo_2015.svg.png"/></a>
 				</div><div class="column">
 					<h1>Follow</h1>
