--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="css/icons.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
+		<script data-ad-client="ca-pub-6547929387743628" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<script src="js/modernizr.custom.js"></script>
 		<style>
 			section {color: #333;}
