--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 		<meta name="description" content="Some inspiration for web divider styles" />
 		<meta name="keywords" content="separator css, divider css, separator style, web design, flat design, inspiration, responsive, svg, pseudo-elements" />
 		<meta name="author" content="Codrops" />
-		<link rel="shortcut icon" href="http://www.gravatar.com/avatar/b8a1284b0d0202c5866d40c04b8bd842.jpg?s=16">
-		<link rel="stylesheet" type="text/css" href="http://static.coreybutler.com/css/cb-embedded.css"/>
-		<link rel="stylesheet" type="text/css" href="http://static.coreybutler.com/css/hint.css"/>
+		<link rel="shortcut icon" href="https://www.gravatar.com/avatar/b8a1284b0d0202c5866d40c04b8bd842.jpg?s=16">
+		<link rel="stylesheet" type="text/css" href="https://static.coreybutler.com/css/cb-embedded.css"/>
+		<link rel="stylesheet" type="text/css" href="https://static.coreybutler.com/css/hint.css"/>
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="css/icons.css" />
@@ -90,8 +90,8 @@
 			<div id="menu">
 				<div class="animate animated hide">
 					<div class="hint--bounce hint--left hint--rounded" data-hint="Find me on Google+"><a href="https://plus.google.com/u/0/+CoreyButlerOfficial" target="_blank" class="icon-gplus"></a></div>
-					<div class="hint--bounce hint--left hint--rounded" data-hint="Schedule a consultation call on clarity.fm"><a href="http://clarity.fm/coreybutler" class="icon-phone" target="_blank"></a></div>
-					<div class="hint--bounce hint--left hint--rounded" data-hint="I co-run Bleeding Edge Web in Austin, TX" style="padding-left:18px;"><a href="http://www.meetup.com/bleeding-edge-web/" target="_blank" class="icon-meetup"></a></div>
+					<div class="hint--bounce hint--left hint--rounded" data-hint="Schedule a consultation call on clarity.fm"><a href="https://clarity.fm/coreybutler" class="icon-phone" target="_blank"></a></div>
+					<div class="hint--bounce hint--left hint--rounded" data-hint="I co-run Bleeding Edge Web in Austin, TX" style="padding-left:18px;"><a href="https://www.meetup.com/bleeding-edge-web/" target="_blank" class="icon-meetup"></a></div>
 				</div>
 				<div id="menubutton" class="icon-menu"></div>
 			</div>
@@ -101,11 +101,11 @@
 			<section class="col-3 ss-style-triangles white" id="main">
 				<div class="column">
 					<h1 style="font-weight: 300 !important; font-family: Lato;">Entrepreneur</h1>
-					<a href="http://angel.co/coreybutler" target="_blank" class="icon icon-angellist"></a>
+					<a href="https://angel.co/coreybutler" target="_blank" class="icon icon-angellist"></a>
 				</div>
 				<div class="column">
 					<h1 style="font-weight: 300 !important; font-family: Lato;">Consultant</h1>
-					<a href="http://www.linkedin.com/in/coreyabutler" target="_blank" class="icon icon-linkedin"></a>
+					<a href="https://www.linkedin.com/in/coreyabutler" target="_blank" class="icon icon-linkedin"></a>
 				</div>
 				<div class="column">
 					<h1 style="font-weight: 300 !important; font-family: Lato;">Developer</h1>
@@ -116,15 +116,15 @@
 				<h3>I also write from time to time...</h3>
 				<div class="column">
 					<h1>Articles</h1>
-					<a href="http://medium.com/@goldglovecb" target="_blank"><img src="http://static.coreybutler.com/images/icons/medium.png"/></a>
-					<!--<img src="http://www.gravatar.com/avatar/b8a1284b0d0202c5866d40c04b8bd842.jpg?s=256" class="circle"/>-->
+					<a href="https://medium.com/@goldglovecb" target="_blank"><img src="https://static.coreybutler.com/images/icons/medium.png"/></a>
+					<!--<img src="https://www.gravatar.com/avatar/b8a1284b0d0202c5866d40c04b8bd842.jpg?s=256" class="circle"/>-->
 				</div>
 				<div class="column">
 					<h1>Top Writer</h1>
 					<a href="https://www.quora.com/profile/Corey-Butler" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Quora_logo_2015.svg/200px-Quora_logo_2015.svg.png"/></a>
 				</div><div class="column">
 					<h1>Follow</h1>
-					<a href="http://twitter.com/goldglovecb" target="_blank" class="hint--bounce hint--left hint--rounded" data-hint="@goldglovecb"><div class="icon-twitter"></div></a>
+					<a href="https://twitter.com/goldglovecb" target="_blank" class="hint--bounce hint--left hint--rounded" data-hint="@goldglovecb"><div class="icon-twitter"></div></a>
 				</div>
 			</section>
 		</div>
